# fbpinns

./: .gitignore  Makefile  README.md  base.py  pyproject.toml  report.md
src/fbpinns/: base.py  ext.py  net.py  utils.py
