[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fbpinns"
description = "finite basis physics informed neural networks"
authors = [ { name = "Nicolas Trutmann", email = "nicolatr@student.ethz.ch" }, ]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch==2.0.1",
    "matplotlib==3.7.1",
    "numpy==1.25.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "pyclean",
]

[project.scripts]
base-task = "fbpinns.base:main"

